--- a/polished/package.json
+++ b/polished/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "reactbulma": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
